gitops/charts/tourism-recommender/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: tourism-mlops
